--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@usedapp/core": "^1.1.5",
     "antd": "^4.22.8",
     "ethers": "^5.7.0",
+    "ipfs-http-client": "^57.0.3",
     "next": "12.2.5",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
