--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "fix-all": "yarn format && yarn lint:fix",
-    "test-all": "yarn format:check && yarn lint"
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@usedapp/core": "^1.1.5",
     "antd": "^4.22.8",
     "ethers": "^5.7.0",
-    "ipfs-http-client": "^57.0.3",
     "next": "12.2.5",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
@@ -27,12 +27,18 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.7.14",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.22.0",
     "eslint-config-next": "^12.2.5",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "prettier": "^2.7.1",
