--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@usedapp/core": "^1.1.5",
+    "@solana-mobile/wallet-adapter-mobile": "^0.9.4",
+    "@solana/wallet-adapter-base": "^0.9.17",
+    "@solana/wallet-adapter-coinbase": "^0.1.12",
+    "@solana/wallet-adapter-ledger": "^0.9.19",
+    "@solana/wallet-adapter-phantom": "^0.9.16",
+    "@solana/wallet-adapter-react": "^0.15.19",
+    "@solana/wallet-adapter-react-ui": "^0.9.17",
+    "@solana/wallet-adapter-wallets": "^0.19.0",
+    "@solana/web3.js": "^1.63.1",
     "antd": "^4.22.8",
-    "ethers": "^5.7.0",
-    "gapi-script": "^1.2.0",
-    "next": "12.2.5",
+    "axios": "^1.0.0",
+    "next": "12.3.1",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
